After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 754199 - audiobasesink: patch for missing/incorrect documentation about the custom slaving method
audiobasesink: patch for missing/incorrect documentation about the custom sla...
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
git master
Other Linux
: Normal normal
: 1.5.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2015-08-27 20:55 UTC by Carlos Rafael Giani
Modified: 2015-08-28 18:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch for fixing custom slaving method documentation (3.08 KB, patch)
2015-08-27 20:57 UTC, Carlos Rafael Giani
none Details | Review
Patch for fixing custom slaving method documentation, v2 (5.65 KB, patch)
2015-08-27 21:10 UTC, Carlos Rafael Giani
committed Details | Review

Description Carlos Rafael Giani 2015-08-27 20:55:19 UTC
The symbols related to the custom slaving method are missing in gst-plugins-base-libs-sections.txt . Also, the GstAudioBaseSinkDiscontReason comments are incorrect, causing gtkdoc to skip details.
Comment 1 Carlos Rafael Giani 2015-08-27 20:57:42 UTC
Created attachment 310132 [details] [review]
Patch for fixing custom slaving method documentation
Comment 2 Carlos Rafael Giani 2015-08-27 21:10:58 UTC
Created attachment 310134 [details] [review]
Patch for fixing custom slaving method documentation, v2

Added more fixes for the callback typedef
Comment 3 Sebastian Dröge (slomo) 2015-08-28 07:16:01 UTC
commit c95d809a962ca01b8973b716b7f44817074fe73e
Author: Carlos Rafael Giani <dv@pseudoterminal.org>
Date:   Thu Aug 27 23:08:51 2015 +0200

    audiobasesink: Fix incorrect/missing custom slaving method documentation
    
    https://bugzilla.gnome.org/show_bug.cgi?id=754199