audiobasesink: Fix incorrect/missing custom slaving method documentation

https://bugzilla.gnome.org/show_bug.cgi?id=754199